// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`justifyContent renders 0 1`] = `
Array [
  .c0 {
  -webkit-box-pack: 0;
  -webkit-justify-content: 0;
  -ms-flex-pack: 0;
  justify-content: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: 0;
  -webkit-justify-content: 0;
  -ms-flex-pack: 0;
  justify-content: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: 0;
  -webkit-justify-content: 0;
  -ms-flex-pack: 0;
  justify-content: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: 0;
  -webkit-justify-content: 0;
  -ms-flex-pack: 0;
  justify-content: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`justifyContent renders function 1`] = `
Array [
  .c0 {
  -webkit-box-pack: hasnot;
  -webkit-justify-content: hasnot;
  -ms-flex-pack: hasnot;
  justify-content: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: has;
  -webkit-justify-content: has;
  -ms-flex-pack: has;
  justify-content: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: hasnot;
  -webkit-justify-content: hasnot;
  -ms-flex-pack: hasnot;
  justify-content: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: has;
  -webkit-justify-content: has;
  -ms-flex-pack: has;
  justify-content: has;
}

<div
    className="c0"
  />,
]
`;

exports[`justifyContent renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-box-pack: invalid.path.1;
  -webkit-justify-content: invalid.path.1;
  -ms-flex-pack: invalid.path.1;
  justify-content: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: invalid.path.1;
  -webkit-justify-content: invalid.path.1;
  -ms-flex-pack: invalid.path.1;
  justify-content: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: invalid.path.1;
  -webkit-justify-content: invalid.path.1;
  -ms-flex-pack: invalid.path.1;
  justify-content: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: invalid.path.1;
  -webkit-justify-content: invalid.path.1;
  -ms-flex-pack: invalid.path.1;
  justify-content: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`justifyContent renders negative number 1`] = `
Array [
  .c0 {
  -webkit-box-pack: -54881;
  -webkit-justify-content: -54881;
  -ms-flex-pack: -54881;
  justify-content: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: -54881;
  -webkit-justify-content: -54881;
  -ms-flex-pack: -54881;
  justify-content: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: -42365;
  -webkit-justify-content: -42365;
  -ms-flex-pack: -42365;
  justify-content: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: -42365;
  -webkit-justify-content: -42365;
  -ms-flex-pack: -42365;
  justify-content: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`justifyContent renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: July;
    -webkit-justify-content: July;
    -ms-flex-pack: July;
    justify-content: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: August;
    -webkit-justify-content: August;
    -ms-flex-pack: August;
    justify-content: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: September;
    -webkit-justify-content: September;
    -ms-flex-pack: September;
    justify-content: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-box-pack: November;
    -webkit-justify-content: November;
    -ms-flex-pack: November;
    justify-content: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: July;
    -webkit-justify-content: July;
    -ms-flex-pack: July;
    justify-content: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: August;
    -webkit-justify-content: August;
    -ms-flex-pack: August;
    justify-content: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: September;
    -webkit-justify-content: September;
    -ms-flex-pack: September;
    justify-content: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-box-pack: November;
    -webkit-justify-content: November;
    -ms-flex-pack: November;
    justify-content: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: May;
    -webkit-justify-content: May;
    -ms-flex-pack: May;
    justify-content: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: June;
    -webkit-justify-content: June;
    -ms-flex-pack: June;
    justify-content: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: April;
    -webkit-justify-content: April;
    -ms-flex-pack: April;
    justify-content: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-box-pack: November;
    -webkit-justify-content: November;
    -ms-flex-pack: November;
    justify-content: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: May;
    -webkit-justify-content: May;
    -ms-flex-pack: May;
    justify-content: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: June;
    -webkit-justify-content: June;
    -ms-flex-pack: June;
    justify-content: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-pack: April;
    -webkit-justify-content: April;
    -ms-flex-pack: April;
    justify-content: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-box-pack: November;
    -webkit-justify-content: November;
    -ms-flex-pack: November;
    justify-content: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`justifyContent renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-box-pack: July;
    -webkit-justify-content: July;
    -ms-flex-pack: July;
    justify-content: July;
  }
}

@media April {
  .c0 {
    -webkit-box-pack: August;
    -webkit-justify-content: August;
    -ms-flex-pack: August;
    justify-content: August;
  }
}

@media January {
  .c0 {
    -webkit-box-pack: September;
    -webkit-justify-content: September;
    -ms-flex-pack: September;
    justify-content: September;
  }
}

@media April {
  .c0 {
    -webkit-box-pack: November;
    -webkit-justify-content: November;
    -ms-flex-pack: November;
    justify-content: November;
  }
}

@media June {
  .c0 {
    -webkit-box-pack: August;
    -webkit-justify-content: August;
    -ms-flex-pack: August;
    justify-content: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-box-pack: July;
    -webkit-justify-content: July;
    -ms-flex-pack: July;
    justify-content: July;
  }
}

@media April {
  .c0 {
    -webkit-box-pack: August;
    -webkit-justify-content: August;
    -ms-flex-pack: August;
    justify-content: August;
  }
}

@media January {
  .c0 {
    -webkit-box-pack: September;
    -webkit-justify-content: September;
    -ms-flex-pack: September;
    justify-content: September;
  }
}

@media April {
  .c0 {
    -webkit-box-pack: November;
    -webkit-justify-content: November;
    -ms-flex-pack: November;
    justify-content: November;
  }
}

@media June {
  .c0 {
    -webkit-box-pack: August;
    -webkit-justify-content: August;
    -ms-flex-pack: August;
    justify-content: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-box-pack: January;
    -webkit-justify-content: January;
    -ms-flex-pack: January;
    justify-content: January;
  }
}

@media April {
  .c0 {
    -webkit-box-pack: December;
    -webkit-justify-content: December;
    -ms-flex-pack: December;
    justify-content: December;
  }
}

@media January {
  .c0 {
    -webkit-box-pack: April;
    -webkit-justify-content: April;
    -ms-flex-pack: April;
    justify-content: April;
  }
}

@media April {
  .c0 {
    -webkit-box-pack: May;
    -webkit-justify-content: May;
    -ms-flex-pack: May;
    justify-content: May;
  }
}

@media June {
  .c0 {
    -webkit-box-pack: June;
    -webkit-justify-content: June;
    -ms-flex-pack: June;
    justify-content: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-box-pack: January;
    -webkit-justify-content: January;
    -ms-flex-pack: January;
    justify-content: January;
  }
}

@media April {
  .c0 {
    -webkit-box-pack: December;
    -webkit-justify-content: December;
    -ms-flex-pack: December;
    justify-content: December;
  }
}

@media January {
  .c0 {
    -webkit-box-pack: April;
    -webkit-justify-content: April;
    -ms-flex-pack: April;
    justify-content: April;
  }
}

@media April {
  .c0 {
    -webkit-box-pack: May;
    -webkit-justify-content: May;
    -ms-flex-pack: May;
    justify-content: May;
  }
}

@media June {
  .c0 {
    -webkit-box-pack: June;
    -webkit-justify-content: June;
    -ms-flex-pack: June;
    justify-content: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`justifyContent renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-box-pack: 54881;
  -webkit-justify-content: 54881;
  -ms-flex-pack: 54881;
  justify-content: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: 54881;
  -webkit-justify-content: 54881;
  -ms-flex-pack: 54881;
  justify-content: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: 42365;
  -webkit-justify-content: 42365;
  -ms-flex-pack: 42365;
  justify-content: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: 42365;
  -webkit-justify-content: 42365;
  -ms-flex-pack: 42365;
  justify-content: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`justifyContent renders string 1`] = `
Array [
  .c0 {
  -webkit-box-pack: July;
  -webkit-justify-content: July;
  -ms-flex-pack: July;
  justify-content: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: July;
  -webkit-justify-content: July;
  -ms-flex-pack: July;
  justify-content: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: June;
  -webkit-justify-content: June;
  -ms-flex-pack: June;
  justify-content: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: June;
  -webkit-justify-content: June;
  -ms-flex-pack: June;
  justify-content: June;
}

<div
    className="c0"
  />,
]
`;

exports[`justifyContent renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-box-pack: DarkSlateBlue;
  -webkit-justify-content: DarkSlateBlue;
  -ms-flex-pack: DarkSlateBlue;
  justify-content: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: DarkSlateBlue;
  -webkit-justify-content: DarkSlateBlue;
  -ms-flex-pack: DarkSlateBlue;
  justify-content: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: DarkSlateBlue;
  -webkit-justify-content: DarkSlateBlue;
  -ms-flex-pack: DarkSlateBlue;
  justify-content: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-pack: DarkSlateBlue;
  -webkit-justify-content: DarkSlateBlue;
  -ms-flex-pack: DarkSlateBlue;
  justify-content: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
